# KutInfGyak

./: README.md
KutInfGyak/: CMakeLists.txt  Jegyzokonyv_UXF7QF.odt
KutInfGyak/app/: CMakeLists.txt  CMakeLists.txt~
KutInfGyak/app/src/: app.c
KutInfGyak/doc/: CMakeLists.txt  CMakeLists.txt~  mereseuler.plt  mereseuler.plt~
KutInfGyak/phys/: CMakeLists.txt  CMakeLists.txt~
KutInfGyak/phys/src/: phys.c  phys.c~
KutInfGyakJo/: Jegyzokonyv_UXF7QF.odt
KutInfGyakJo/app/: CMakeLists.txt  CMakeLists.txt~
KutInfGyakJo/app/src/: app.c~
KutInfGyakJo/doc/: CMakeLists.txt  mereseuler.plt  mereseuler.plt~
KutInfGyakJo/phys/inc/: phys.h  phys.h~
KutInfGyakJo/phys/src/: phys.c  phys.c~
KutInfGyakVegleges/: CMakeLists.txt  CMakeLists.txt~  Jegyzokonyv_UXF7QF.docx.docx
KutInfGyakVegleges/app/: CMakeLists.txt  CMakeLists.txt~
KutInfGyakVegleges/app/inc/: app.h  app.h~
KutInfGyakVegleges/app/src/: app.c
KutInfGyakVegleges/doc/: CMakeLists.txt  CMakeLists.txt~  mereseuler.plt  mereseuler.plt~
KutInfGyakVegleges/phys/: CMakeLists.txt  CMakeLists.txt~
KutInfGyakVegleges/phys/src/: phys.c  phys.c~
